--- a/views/edit.erb
+++ b/views/edit.erb
@@ -4,7 +4,7 @@
 	<p class="meta"><input type="text" name="tags" value="<%= post.tags %>" /></p>
 	<p class="meta"><%= post.created_at %></p>
 	<div class="entry">
-		<textarea name="body"><%= post.body %></textarea>
+		<textarea name="content"><%= post.content %></textarea>
 	</div>
 	<div class="edit"><input type="submit" value="Save" /></div>
 </div>
