--- a/views/post.erb
+++ b/views/post.erb
@@ -3,7 +3,7 @@
 	<p class="meta"><small><%= post.linked_tags %></small></p>
 	<p class="meta"><%= post.created_at %></p>
 	<div class="entry">
-		<%= post.body_html %>
+		<%= post.content_html %>
 	</div>
 	<% if admin? %>
 		<div class="edit"><a href="<%= post.url %>edit">edit</a></div>
