used Twitter Bootstrap CSS template

--- a/views/auth.erb
+++ b/views/auth.erb
@@ -1,6 +1,8 @@
 <h2>Admin Auth</h2>
-<form action="/auth" method="post">
-	<input type="password" name="password" />
-	<input type="submit" value="Login" />
-</form>
+<div class="login">
+  <form action="/auth" method="post">
+    <input class="span3" type="password" placeholder="Password" name="password" />
+    <button class="btn" type="submit">Login</button>
+  </form>
+</div>
 <script type="text/javascript">document.forms[0].password.focus()</script>
