--- a/views/tagged.erb
+++ b/views/tagged.erb
@@ -1,14 +1,22 @@
 <h1>Posts tagged <%= tag %></h1>
 <% posts.each do |post| %>
-<div class="post">
-	<p class="date"><%= post[:created_at].strftime("%b") %><b><%= post[:created_at].strftime("%d") %></b></p>
-	<h2 class="title"><a href="<%= post.url %>"><%= post[:title] %></a></h2>
-	<p class="meta"><small><%= post.linked_tags %> | <a href="<%= post.url %>#disqus_thread">comments</a></small></p>
-	<div class="entry">
-		<%= post.summary_html %>
-		<% if post.more? %>
-			<a href="<%= post.url %>">Continue reading &raquo;</a>
-		<% end %>
-	</div>
-</div>
+  <div class="post">
+    <div class="post-header">
+      <h2 class="post-title">
+        <a href="<%= post.url %>"><%= post[:title] %></a>
+      </h2>
+      <p class="post-meta">
+        <%= post.created_at.strftime("%Y-%m-%d %H:%M:%S") %>&nbsp;|&nbsp;<small>Posted in</small> <%= post.linked_tags %>
+        <% if Blog.disqus_shortname %>
+         &nbsp;|&nbsp;<a href="<%= post.url %>#disqus_thread">comments</a>
+        <% end %>
+      </p>
+    </div>
+    <div class="post-content">
+      <%= post.summary_html %>
+      <% if post.more? %>
+        <a href="<%= post.url %>">Continue reading &raquo;</a>
+      <% end %>
+    </div>
+  </div>
 <% end %>
