add logout method

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -21,7 +21,7 @@
           </ul>
           <% if admin? %>
             <p class="pull-right">
-              <a href="/posts/new">New post</a>
+              <a href="/posts/new">New post</a>&nbsp;|&nbsp;<a href="/logout">Log out</a>
             </p>
           <% else %>
             <p class="pull-right"><a href="/auth">Log in</a></p>
