--- a/views/auth.erb
+++ b/views/auth.erb
@@ -1,4 +1,9 @@
 <h2>Admin Auth</h2>
+<% if error %>
+  <div class="alert-message block-message error">
+    <p><strong>Oops! You got an error!</strong></p><p>Change this and that and try again.</p>
+  </div>
+<% end %>
 <div class="login">
   <form action="/auth" method="post">
     <input class="span3" type="password" placeholder="Password" name="password" />
