--- a/views/sidebar_layout.erb
+++ b/views/sidebar_layout.erb
@@ -31,30 +31,12 @@
     </div>
     <div class="container">
       <div class="content">
+        <div class="page-header">
+          <h1><%= Blog.title %><p><%= Blog.subtitle %></p></h1>
+        </div>
         <div class="row">
           <div class="span10">
-            <h1>Posts tagged <%= tag %></h1>
-            <% posts.each do |post| %>
-              <div class="post">
-                <div class="post-header">
-                  <h2 class="post-title">
-                    <a href="<%= post.url %>"><%= post[:title] %></a>
-                  </h2>
-                  <p class="post-meta">
-                    <%= post.created_at.strftime("%Y-%m-%d %H:%M:%S") %>&nbsp;|&nbsp;<small>Posted in</small> <%= post.linked_tags %>
-                    <% if Blog.disqus_shortname %>
-                     &nbsp;|&nbsp;<a href="<%= post.url %>#disqus_thread">comments</a>
-                    <% end %>
-                  </p>
-                </div>
-                <div class="post-content">
-                  <%= post.summary_html %>
-                  <% if post.more? %>
-                    <a href="<%= post.url %>">Continue reading &raquo;</a>
-                  <% end %>
-                </div>
-              </div>
-            <% end %>
+            <%= yield %>
             <% if Blog.disqus_shortname %>
               <script type="text/javascript">
                 //<[CDATA[
@@ -72,7 +54,7 @@
               </script>
             <% end %>
             <div class="paginate">
-              <%= paginate(posts, :tag => tag) %>
+              <%= paginate(posts) %>
             </div>
           </div>
           <div class="span4">
