--- a/public/customize.css
+++ b/public/customize.css
@@ -1,85 +1,17 @@
-body {
-    font-size: 14px;
-    padding-top: 60px;
-}
-.sidebar,.content,.login {
-    clear: both;
-    margin-bottom: 10px;
-    padding: 10px 0;
-}
-.post {
-    margin: 0 0 1.625em;
-    padding: 0 0 1.625em;
-    border-bottom: 1px solid #DDD;
-}
-.post-header {
-    border-left: 3px solid #DDD;
-    padding-left: 5px;
-}
-.post-content p {
-    margin: 12px 0;
-}
-/* Override some defaults */
-html, body {
-    background-color: #eee;
-}
-body {
-    padding-top: 40px; /* 40px to make the container go all the way to the bottom of the topbar */
-}
-.container > footer p {
-    text-align: center; /* center align it with the container */
-}
-.container {
-    width: 820px; /* downsize our container to make the content feel a bit tighter and more cohesive. NOTE: this removes two full columns from the grid, meaning you only go to 14 columns and not 16. */
-}
-
-/* The white background content wrapper */
-.content {
-    background-color: #fff;
-    padding: 20px;
-    margin: 0 -20px; /* negative indent the amount of the padding to maintain the grid system */
-    -webkit-border-radius: 0 0 6px 6px;
-    -moz-border-radius: 0 0 6px 6px;
-    border-radius: 0 0 6px 6px;
-    -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15);
-    -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15);
-    box-shadow: 0 1px 2px rgba(0,0,0,.15);
-}
-
-/* Page header tweaks */
-.page-header {
-    background-color: #f5f5f5;
-    padding: 20px 20px 10px;
-    margin: -20px -20px 20px;
-}
-
-/* Styles you shouldn't keep as they are for displaying this base example only */
-.content .span10,
-.content .span4 {
-    min-height: 500px;
-}
-/* Give a quick and non-cross-browser friendly divider */
-.content .span4 {
-    margin-left: 0;
-    padding-left: 19px;
-    border-left: 1px solid #eee;
-}
-
-.topbar .btn {
-    border: 0;
-}
-
-.deleted-msg {
-    color: #B94A48;
-}
-
-.paginate .pull-right {
-    margin-left: 120px;
-}
-
-.change_slug {
-    margin-top: 18px;
-}
-.change_slug .help-inline {
-    color: #B94A48;
-}
+body{font-size:14px;padding-top:40px;}
+.sidebar,.content,.login{clear:both;margin-bottom:10px;padding:10px 0;}
+.post{border-bottom:1px solid #DDD;margin:0 0 1.625em;padding:0 0 1.625em;}
+.post-header{border-left:3px solid #DDD;padding-left:5px;}
+.post-content p{margin:12px 0;}
+html,body{background-color:#eee;}
+.container > footer p{text-align:center;}
+.container{width:820px;}
+.content{background-color:#fff;-webkit-border-radius:0 0 6px 6px;-moz-border-radius:0 0 6px 6px;border-radius:0 0 6px 6px;-webkit-box-shadow:0 1px 2px rgba(0,0,0,.15);-moz-box-shadow:0 1px 2px rgba(0,0,0,.15);box-shadow:0 1px 2px rgba(0,0,0,.15);margin:0 -20px;padding:20px;}
+.page-header{background-color:#f5f5f5;margin:-20px -20px 20px;padding:20px 20px 10px;}
+.content .span10,.content .span4{min-height:500px;}
+.content .span4{margin-left:0;padding-left:19px;border-left:1px solid #eee;}
+.topbar .btn{border:0;}
+.paginate .pull-right{margin-left:120px;}
+.change_slug{margin-top:18px;}
+.tagged{color:#0069D6;}
+.deleted-msg,.change_slug .help-inline{color:#B94A48;}
