--- a/views/post.erb
+++ b/views/post.erb
@@ -4,7 +4,7 @@
       <a href="<%= post.url %>"><%= post[:title] %></a>
     </h2>
     <p class="post-meta">
-      <%= post.created_at.strftime("%Y-%m-%d %H:%M:%S") %>&nbsp;|&nbsp;<small>Posted in</small> <%= post.linked_tags %>
+      <%= post.show_create_at %>&nbsp;|&nbsp;<small>Posted in</small> <%= post.linked_tags %>
     </p>
   </div>
   <div class="post-content">
