--- a/views/tagged.erb
+++ b/views/tagged.erb
@@ -10,7 +10,7 @@
             <a href="<%= post.url %>"><%= post[:title] %></a>
           </h2>
           <p class="post-meta">
-            <%= post.created_at.strftime("%Y-%m-%d %H:%M:%S") %>&nbsp;|&nbsp;<small>Posted in</small> <%= post.linked_tags %>
+            <%= post.show_create_at %>&nbsp;|&nbsp;<small>Posted in</small> <%= post.linked_tags %>
             <% if Blog.disqus_shortname %>
              &nbsp;|&nbsp;<a href="<%= post.url %>#disqus_thread">comments</a>
             <% end %>
