--- a/views/sidebar_layout.erb
+++ b/views/sidebar_layout.erb
@@ -1,15 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <title><%= Blog.title %></title>
-    <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
-    <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-    <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.2.1/css/bootstrap-combined.min.css" rel="stylesheet">
-    <link href="/customize.css" rel="stylesheet" type="text/css" />
+    <%= erb :"partial/head" %>
     <link href="/feed" rel="alternate" title="Primary Feed" type="application/atom+xml" />
   </head>
   <body>
